k8s/mad/mad4shell-service-unsafe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.mad.service: mad4shell-service-unsafe
  name: mad4shell-service-unsafe
spec:
  replicas: 1
  selector:
    matchLabels:
      io.mad.service: mad4shell-service-unsafe
  strategy: {}
  template:
    metadata:
      labels:
        io.mad.network/mad-network: "true"
        io.mad.service: mad4shell-service-unsafe
    spec:
      containers:
        - image: ghcr.io/mad-goat-project/mad-goat4shell-service:unsafe
          name: mad4shell-service-unsafe
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: "500Mi"
            requests:
              cpu: 250m
              memory: "250Mi"
      restartPolicy: Always
