k8s/mad/mad4shell-service-unsafe-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.mad.service: mad4shell-service-unsafe
  name: mad4shell-service-unsafe
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 8080
  selector:
    io.mad.service: mad4shell-service-unsafe
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-unsafe
spec:
  stripPrefixRegex:
    regex:
      - "/goat4shell-unsafe"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-app
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.mad.localhost`) && PathPrefix(`/goat4shell-unsafe`)
      middlewares:
        - name: strip-prefix-unsafe
      services:
        - kind: Service
          name: mad4shell-service-unsafe
          namespace: default
          port: 8080
