k8s/mad/mad-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mad-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.mad.network/mad-network: "true"
  podSelector:
    matchLabels:
      io.mad.network/mad-network: "true"
